--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -37,6 +37,25 @@ main {
   position: relative;
   top: 80px;
   left: 22px;
-  width: 269px;
+  width: 267px;
   height: 471px;
+}
+
+#rede-social {
+  text-align: right;
+}
+
+#rede-social img {
+  width: 50px;
+  border-radius: 9999px;
+  margin: 10px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.399);
+  box-sizing: border-box;
+}
+
+#rede-social img:hover {
+  border: 2px solid rgba(255, 255, 255, 0.637);
+  transform: translate(-2px, -2px);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.623);
+  transition: transform 0.3s, border 0.1s;
 }
